--- a/src/main/resources/com/cursosdedesarrollo/pages/Index.tml
+++ b/src/main/resources/com/cursosdedesarrollo/pages/Index.tml
@@ -7,5 +7,9 @@
 <p>
     <t:actionlink t:id="start">start guessing</t:actionlink>
 </p>
+<h1>Address Book</h1>
 
+<ul>
+    <li><t:pagelink page="address/create">Create new address</t:pagelink></li>
+</ul>
 </html>
